修正 checkstyle 多个模块